--- a/doc/paper/references.bib
+++ b/doc/paper/references.bib
@@ -436,3 +436,25 @@
   pages = {1--12},
   doi = {10.1002/fld}
 }
+
+@article{m_matrix_fiedler,
+  author = {M. Fiedler and V. Ptak},
+  year = {1962},
+  title = {On matrices with non-positive off-diagonal elements and positive
+    principal minors},
+  journal = {Czechoslovak Mathematical Journal},
+  volume = {12},
+  number = {3},
+  pages = {382--400}
+}
+
+@article{m_matrix_poole,
+  author = {George D. Poole},
+  title = {Generalized M-Matrices and Applications},
+  journal = {Mathematics of Computation},
+  volume = {29},
+  number = {131},
+  month = {July},
+  year = {1975},
+  pages = {903--910}
+}
