--- a/doc/paper/shortcuts.tex
+++ b/doc/paper/shortcuts.tex
@@ -33,6 +33,7 @@
 % linear system
 \newcommand{\U}{\mathbf{U}}
 \newcommand{\A}{\mathbf{A}}
+\newcommand{\D}{\mathbf{D}}
 \newcommand{\ssrhs}{\mathbf{b}}
 \newcommand{\M}{\mathbf{M}}
 \newcommand{\dt}{\Delta t}
@@ -44,3 +45,12 @@
 
 % FEM
 \newcommand{\test}{\varphi}
+
+% indices
+\newcommand{\indices}{\mathcal{I}}
+
+% theorem environments
+\newtheorem{thm}{Theorem}
+\newtheorem{lem}[thm]{Lemma}
+\newdefinition{defn}{Definition}
+\newproof{prf}{Proof}
