more work on paper

--- a/doc/paper/content/low.tex
+++ b/doc/paper/content/low.tex
@@ -1,3 +1,5 @@
+% !TEX root = ../paper.tex
+
 \begin{itemize}
   \item M-matrix
   \item positivity preservation
@@ -95,5 +97,5 @@ low-order steady-state system matrix.
 \begin{thm}[M-matrix property]
   The low-order steady-state system matrix $\A^L$ is a non-singular M-matrix.
 \end{thm}
-\input{m_matrix}
+\input{content/m_matrix}
 %-------------------------------------------------------------------------------
