--- a/doc/paper/shortcuts.tex
+++ b/doc/paper/shortcuts.tex
@@ -40,6 +40,7 @@
 
 % integrals and sums
 \newcommand{\sumj}{\sum\limits_j}
+\newcommand{\sumKSij}[1][K]{\sum\limits_{#1\in\mathcal{K}(S_{i,j})}}
 \newcommand{\intSi}{\int\limits_{S_i}}
 \newcommand{\intSij}{\int\limits_{S_{i,j}}}
 
@@ -54,3 +55,6 @@
 \newtheorem{lem}[thm]{Lemma}
 \newdefinition{defn}{Definition}
 \newproof{prf}{Proof}
+
+% parentheses
+\newcommand{\pr}[1]{\left(#1\right)}
